<resources>
    <string name="app_name">Navier</string>
    <string name="hello_android_academy">Hello Android Academy!</string>
    <string name="back_label">Back</string>
    <string name="movie_genres">Action, Adventure, Fantasy</string>
    <string name="movie_reviews">125 Reviews</string>
    <string name="image_of_main_poster">image of main poster</string>
    <string name="storyline">Storyline</string>
    <string name="movie_description">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="movie_title">Avengers: \nEnd Game</string>
    <string name="movie_title_card">Avengers: End Game</string>
    <string name="cast">Cast</string>
    <string name="image_of_actor_or_actress">image of actor or actress</string>
    <string name="robert_downey_jr">Robert Downey Jr.</string>
    <string name="age_rating_default">18+</string>
    <string name="chris_evans">Chris Evans</string>
    <string name="mark_ruffalo">Mark Ruffalo</string>
    <string name="chris_hemsworth">Chris Hemsworth</string>
    <string name="image_rating_star">image rating star</string>

    <string name="movies_list">Movies list</string>
    <string name="movie_genres_card">Action, Adventure, Drama</string>
    <string name="movie_duration">137 min</string>
    <string name="image_like">image of like icon</string>

    <plurals name="review">
        <item quantity="one">%1$d review</item>
        <item quantity="other">%1$d reviews</item>
    </plurals>

    <string name="duration_unit">%1$d min</string>
    <string name="desc_img_no_data">Image showing data not available</string>
    <string name="message_lost_data">No data available. Please try again later</string>

    <string name="channel_new_movies">New messages</string>
    <string name="channel_new_movies_description">New movies loaded from background</string>
    <string name="notification_movie_recommendation_title">New movie you might like!</string>
    <string name="notification_movie_recommendation_desc">\"%1$s\" with %2$s rating</string>

    <string name="permission_ask_write_calendar">To continue schedule the movie - please give calendar access</string>
    <string name="permission_grant">Grand</string>
    <string name="permission_denied">Deny</string>
    <string name="watch_later">Watch later</string>

</resources>