<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="@dimen/view_big_gap">

        <ImageView
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_movie_background_height"
            android:contentDescription="@string/image_of_main_poster"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/img_avengers_background" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/gradient"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintEnd_toEndOf="@+id/poster"
            app:layout_constraintStart_toStartOf="@+id/poster"
            app:layout_constraintTop_toTopOf="@+id/poster" />

        <Button
            android:id="@+id/toolbar"
            style="@style/ToolbarButtonTextStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:background="?android:attr/selectableItemBackground"
            android:text="@string/back_label"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/age_rating"
            style="@style/TextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginBottom="@dimen/view_big_gap"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            tools:text="@string/age_rating_default" />

        <TextView
            android:id="@+id/title"
            style="@style/TextMainHeaderStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginEnd="@dimen/layout_gap"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/poster"
            tools:text="Avengers: \nEnd Game" />

        <!--text shadow-->
        <!--android:shadowColor="@color/accent"
        android:shadowDx="2"
        android:shadowDy="5"
        android:shadowRadius="5"-->

        <TextView
            android:id="@+id/genres"
            style="@style/TextStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginEnd="@dimen/layout_gap"
            android:textColor="@color/accent"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title"
            tools:text="@string/movie_genres" />

        <RatingBar
            android:id="@+id/ratingBar"
            style="?android:attr/ratingBarStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="8dp"
            android:isIndicator="true"
            android:numStars="5"
            android:theme="@style/RatingBarStyle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genres"
            tools:rating="4" />

        <TextView
            android:id="@+id/reviews"
            style="@style/ReviewTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/view_medium_gap"
            android:layout_marginBottom="@dimen/view_medium_gap"
            android:paddingStart="12dp"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/genres"
            tools:ignore="RtlSymmetry"
            tools:text="@string/movie_reviews" />

        <TextView
            android:id="@+id/tvStoryline"
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="@dimen/view_big_gap"
            android:text="@string/storyline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/reviews" />

        <TextView
            android:id="@+id/storyline_text"
            style="@style/TextRegularStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginEnd="@dimen/layout_gap"
            android:lineSpacingExtra="4dp"
            android:paddingTop="@dimen/view_medium_gap"
            android:paddingBottom="@dimen/view_medium_gap"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvStoryline"
            tools:text="@string/movie_description" />

        <TextView
            android:id="@+id/cast"
            style="@style/TextHeaderStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/layout_gap"
            android:layout_marginTop="@dimen/view_big_gap"
            android:text="@string/cast"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/storyline_text" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/view_big_gap"
            android:layout_marginEnd="@dimen/view_big_gap"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cast"
            tools:itemCount="4"
            tools:listitem="@layout/view_holder_actor" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:paddingTop="@dimen/state_message_offset"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar" />

        <LinearLayout
            android:id="@+id/layoutLostData"
            android:layout_width="@dimen/error_message_size"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="@dimen/state_message_offset"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/imageLostData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_img_no_data"
                android:src="@drawable/ic_no_asset" />

            <TextView
                android:id="@+id/textLostData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/desc_img_no_data"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:paddingTop="24dp"
                android:text="@string/message_lost_data"
                android:textColor="@color/text_regular"
                android:textSize="20sp" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
